# SimpleText

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt  emscripten_example.cpp  glfw_example.cpp
examples/emscripten_msvc/: emscripten_test.sln  emscripten_test.vcxproj
examples/glfw-3.1/msvc/: glfw.vcxproj  glfw.vcxproj.filters  glfw_config.h
examples/glfw_msvc/: glfw_test.sln  glfw_test.vcxproj  glfw_test.vcxproj.filters
examples/ios_example/: Info.plist  Launch Screen.xib  TextRenderer.cpp  TextRenderer.h  ViewController.m
examples/ios_example/Base.lproj/: Main.storyboard
examples/ios_example/ios_example.xcodeproj/: project.pbxproj
examples/libs/: CMakeLists.txt.in
include/: simpletext.h
